force-app/main/default/objects/Config__c/fields/App_Id__c.field-meta.xml
<CustomField>
    <fullName>App_Id__c</fullName>
    <label>App Id</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JATIS</fullName>
            </value>
            <value>
                <fullName>Purecloud</fullName>
            </value>
            <value>
                <fullName>T2MIO</fullName>
            </value>
            <value>
                <fullName>JATIS_COSTER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>