force-app/main/default/objects/Config__c/fields/Generate_Date__c.field-meta.xml
<CustomField>
    <fullName>Generate_Date__c</fullName>
    <label>Generate Date</label>
    <type>Date</type>
</CustomField>